--- a/Demo/.classpath
+++ b/Demo/.classpath
@@ -1,11 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/servlet-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jasper.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/jsp-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/el-api.jar"/>
 	<classpathentry kind="var" path="TOMCAT_HOME/lib/annotations-api.jar"/>
 	<classpathentry kind="src" path="WEB-INF/src"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/commons-fileupload-1.3.3-bin/commons-fileupload-1.3.3.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/commons-io-2.5/commons-io-2.5.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/mysql-connector-java-5.1.44/mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/poi-3.17/poi-3.17.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/poi-ooxml-3.11.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/jersey-multipart.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/cos-multipart.jar"/>
+	<classpathentry kind="lib" path="/home/s5/Downloads/xmlbeans-2.4.0.jar"/>
 	<classpathentry kind="output" path="WEB-INF/classes"/>
 </classpath>
